# llama3_finetuning

./: .gitignore  README.md  main.py  pyproject.toml  setup_env  train
distillation/: data_module.py  main.py  student.py  teacher.py  trainer.py
distillation/model/: _init_.py  moe_config.py  moe_model.py
distillation/modules/: data_module.py  student.py  teacher.py  trainer.py
dpo/: accelerate_config.yaml  callbacks.py  collators.py  data_module.py  deepspeed_config.yaml  ds_config.json  model_test.py  model_test_and_upload.py  push_to_hub.py  train  train.py  trainer_module.py
gguf_convert/: convert.py
lightning/: model.py  module.py  requirements.txt  trainer.py  utils.py
lightning_peft/: dataset.py  trainer.py
llama_sft/: train
llama_sft/config/: fsdp_qlora.yaml
llm_train/: llama_finetuning.py
llm_train/config/: fsdp_qlora.yaml
rlhf/: callbacks.py  collators.py  data_module.py  train.py
