[tool.poetry]
name = "lang-app-summary"
version = "0.1.0"
description = ""
authors = ["conan.jung"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.5"
torchvision = {version = "^0.18.1+cu121", source = "torch"}
torchaudio = {version = "^2.3.1+cu121", source = "torch"}
# jax = {extras = ["cuda11"], version = "^0.4.30" }
transformers = { git="https://github.com/huggingface/transformers.git" }
faiss-cpu = "^1.8.0.post1"
chromadb = "^0.5.3"
openai = "^1.35.3"
streamlit = "^1.36.0"
flash-attn = "^2.6.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "jaxlib"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
